# cvpp

./: .gitignore  CMakeLists.txt  README.md
cvcl/: CMakeLists.txt
cvcl/include/cvpp/cvcl/: Convolution.h  HarrisDetector.h  Image.h  Queue.h  StructureTensor.h
cvcl/src/: Image.cpp  Queue.cpp
cvcl/test/: DeviceTest.cpp
cvpp/: CMakeLists.txt
cvpp/include/cvpp/: CommonFilters.h  Convolution.h  Device.h  Feature.h  HarrisDetector.h  Image.h  Sampler.h  StructureTensor.h
cvpp/src/: CMakeLists.txt  Device.cpp  Image.cpp
cvpp/src/swig/: cvpp.i  cvpplua.i  cvpppython.i
cvpp/test/: CMakeLists.txt  DeviceTest.cpp
cvsycl/: CMakeLists.txt
cvsycl/benchmark/: main.cpp
cvsycl/include/cvpp/cvsycl/: Convolution.h  HarrisDetector.h  Image.h  Sampler.h  StructureTensor.h
cvsycl/src/: Image.cpp
cvsycl/src/swig/: cvsycl.i  cvsyclLua.i  cvsyclPython.i
cvsycl/test/: DeviceTest.cpp
include/cvpp/: CommonFilters.h  Convolution.h  HarrisDetector.h  Image.h  Sampler.h  StructureTensor.h
src/: CMakeLists.txt  Image.cpp
test/: CMakeLists.txt  DeviceTest.cpp
